--- a/OPI_Analytics_SeccionB.ipynb
+++ b/OPI_Analytics_SeccionB.ipynb
@@ -6,7 +6,7 @@
       "name": "OPI_Analytics_SeccionB.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOqbeBxwW4iglHk9Bs33j1E",
+      "authorship_tag": "ABX9TyOrbM/zWnM7DAP5uLqzhnsV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,7 +135,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<u>**Tercera aproximación:**</u>\n",
+        "<u> **Tercera aproximación:**</u> \n",
+        "Evaluar si tiene sentido pensar que la demanda diaria de las paletas sigue un modelo SARMA.\n",
+        "Si este supuesto tiene sentido entonces este modelo se puede simular en Python. Y por consiguiente se podrían evaluar diferentes estrategias para minimizar costos."
+      ],
+      "metadata": {
+        "id": "Nl9d_w-ctlvH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<u>**Cuarta aproximación:**</u>\n",
         "Por cada máquina expendedora crearía un modelo siguiendo los siguientes pasos: \n",
         "\n",
         "**1.**   Definir con los datos históricos un umbral de disponibilidad promedio de paletas. Cuando la disponibilidad en un registro sea $0$, cambiar tal valor por el número de paletas retiradas.\n",
